--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Qingying Meng",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
